--- a/Company.PL/appsettings.json
+++ b/Company.PL/appsettings.json
@@ -6,7 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server =.;Database = CompanyRoute;Trusted_Connection = True;TrustServerCertificate = True"
+    "DefaultConnection": "Server =.;Database = CompanyRoute;Trusted_Connection = True;TrustServerCertificate = True;MultipleActiveResultSets=True"
+  },
+  "MailSettings": {
+    "Email": "mo7m3d1235@gmail.com",
+    "DisplayName": "MohamedIbrahim",
+    "password": "karhwjezsvfktsdx",
+    "Host": "smpt.gmail.com",
+    "port": "587"
   },
   "AllowedHosts": "*"
 }
