--- a/Company.PL/appsettings.json
+++ b/Company.PL/appsettings.json
@@ -12,8 +12,14 @@
     "Email": "mo7m3d1235@gmail.com",
     "DisplayName": "MohamedIbrahim",
     "password": "karhwjezsvfktsdx",
-    "Host": "smpt.gmail.com",
+    "Host": "smtp.gmail.com",
     "port": "587"
+  },
+
+  "TwilioSettings": {
+    "AccountSID": "",
+    "AuthToken": "",
+    "PhoneNumber": ""
   },
   "AllowedHosts": "*"
 }
