--- a/Company.DAL/Company.DAL.csproj
+++ b/Company.DAL/Company.DAL.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.13" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
+    <PackageReference Include="Twilio" Version="7.10.0" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="8.1.1" />
   </ItemGroup>
 
 </Project>
