--- a/Compnay.BLL/Compnay.BLL.csproj
+++ b/Compnay.BLL/Compnay.BLL.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="Twilio" Version="7.10.0" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="8.1.1" />
   </ItemGroup>
 
   <ItemGroup>
